Package re-naming.

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="16dp"
         tools:text="Heading"/>
 
-    <uk.co.akm.test.sim.boatinpond.activity.impl.TestScreenView
+    <uk.co.akm.test.sim.boatinpond.activity.impl.test.TestScreenView
         android:id="@+id/test_screen_view"
         android:layout_width="match_parent"
         android:layout_height="400dp"
