--- a/app/src/main/res/layout/activity_boat.xml
+++ b/app/src/main/res/layout/activity_boat.xml
@@ -34,6 +34,25 @@
         android:text="Start"
         android:onClick="onCommand"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/rudder_left_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Left"/>
+
+        <Button
+            android:id="@+id/rudder_right_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Right"/>
+    </LinearLayout>
+
     <TextView
         android:id="@+id/speed_txt"
         android:layout_width="wrap_content"
