--- a/app/src/main/res/layout/activity_motor_boat.xml
+++ b/app/src/main/res/layout/activity_motor_boat.xml
@@ -47,11 +47,19 @@
             android:id="@+id/mb_motor_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="40dp"
+            android:layout_marginRight="2dp"
             android:minWidth="0dp"
             android:minHeight="0dp"
             android:textSize="12sp"
             android:text="ON"/>
+
+        <View
+            android:id="@+id/mb_motor_status"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginRight="18dp"
+            android:layout_gravity="center_vertical"
+            android:background="#0000FF"/>
 
         <Button
             android:id="@+id/mb_rudder_left_btn"
