--- a/app/src/main/res/layout/activity_boat.xml
+++ b/app/src/main/res/layout/activity_boat.xml
@@ -9,21 +9,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left|top"
-        android:layout_marginTop="16dp"
-        tools:text="Coordinates"/>
+        android:layout_marginTop="@dimen/indicator_margin_top"
+        tools:text="@string/coordinates_desc"/>
 
     <TextView
         android:id="@+id/heading_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|top"
-        android:layout_marginTop="16dp"
-        tools:text="Heading"/>
+        android:layout_marginTop="@dimen/indicator_margin_top"
+        tools:text="@string/heading_desc"/>
 
     <uk.co.akm.test.sim.boatinpond.activity.impl.boat.BoatScreenView
         android:id="@+id/boat_screen_view"
         android:layout_width="match_parent"
-        android:layout_height="440dp"
+        android:layout_height="@dimen/main_view_height"
         android:layout_gravity="center"/>
 
     <LinearLayout
@@ -36,13 +36,13 @@
             android:id="@+id/rudder_left_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="&lt;"/>
+            android:text="@string/rudder_left_symbol"/>
 
         <Button
             android:id="@+id/rudder_right_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="&gt;"/>
+            android:text="@string/rudder_right_symbol"/>
     </LinearLayout>
 
     <TextView
@@ -50,6 +50,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
-        android:layout_marginBottom="16dp"
-        tools:text="Speed"/>
+        android:layout_marginBottom="@dimen/indicator_margin_top"
+        tools:text="@string/speed_desc"/>
 </FrameLayout>
