--- a/app/src/main/res/layout/activity_boat.xml
+++ b/app/src/main/res/layout/activity_boat.xml
@@ -1,55 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/location_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left|top"
-        android:layout_marginTop="@dimen/indicator_margin_top"
-        tools:text="@string/coordinates_desc"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5">
 
-    <TextView
-        android:id="@+id/heading_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:layout_marginTop="@dimen/indicator_margin_top"
-        tools:text="@string/heading_desc"/>
+        <TextView
+            android:id="@+id/location_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center_vertical"
+            tools:text="@string/coordinates_desc"/>
+
+        <TextView
+            android:id="@+id/heading_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            tools:text="@string/heading_desc"/>
+    </FrameLayout>
 
     <uk.co.akm.test.sim.boatinpond.activity.impl.boat.BoatScreenView
         android:id="@+id/boat_screen_view"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/main_view_height"
-        android:layout_gravity="center"/>
+        android:layout_height="0dp"
+        android:layout_weight="85"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
-        android:orientation="horizontal">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="10">
 
-        <Button
-            android:id="@+id/rudder_left_btn"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/rudder_left_symbol"/>
+            android:layout_gravity="center"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/rudder_right_btn"
+            <Button
+                android:id="@+id/rudder_left_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rudder_left_symbol"/>
+
+            <Button
+                android:id="@+id/rudder_right_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rudder_right_symbol"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/speed_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/rudder_right_symbol"/>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/speed_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|bottom"
-        android:layout_marginBottom="@dimen/indicator_margin_top"
-        tools:text="@string/speed_desc"/>
-</FrameLayout>
+            android:layout_gravity="right|center_vertical"
+            tools:text="@string/speed_desc"/>
+    </FrameLayout>
+</LinearLayout>
