--- a/app/src/main/res/layout/activity_motor_boat.xml
+++ b/app/src/main/res/layout/activity_motor_boat.xml
@@ -44,23 +44,26 @@
         android:layout_weight="10"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/mb_motor_switch"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="2dp"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            android:textSize="12sp"
-            android:text="ON"/>
-
-        <View
-            android:id="@+id/mb_motor_status"
-            android:layout_width="@dimen/motor_switch_status_size"
-            android:layout_height="@dimen/motor_switch_status_size"
             android:layout_marginRight="20dp"
-            android:layout_gravity="center_vertical"
-            android:background="#0000FF"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Motor"/>
+
+            <Switch
+                android:id="@+id/mb_motor_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:showText="true"
+                android:textOn="ON"
+                android:textOff="OFF"/>
+        </LinearLayout>
 
         <Button
             android:id="@+id/mb_rudder_left_btn"
