--- a/app/src/main/res/layout/activity_motor_boat.xml
+++ b/app/src/main/res/layout/activity_motor_boat.xml
@@ -39,7 +39,7 @@
         android:layout_weight="85"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
         android:orientation="horizontal">
@@ -47,7 +47,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
+            android:layout_weight="0"
+            android:layout_gravity="left"
             android:orientation="vertical">
 
             <TextView
@@ -65,45 +66,68 @@
                 android:textOff="OFF"/>
         </LinearLayout>
 
-        <Button
-            android:id="@+id/mb_rudder_left_btn"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="@dimen/rudder_button_min_width"
-            android:textSize="@dimen/text_size_control"
-            android:text="@string/rudder_left_symbol"/>
+            android:layout_weight="1"
+            android:layout_gravity="center_horizontal">
 
-        <Button
-            android:id="@+id/mb_rudder_right_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="22dp"
-            android:minWidth="@dimen/rudder_button_min_width"
-            android:textSize="@dimen/text_size_control"
-            android:text="@string/rudder_right_symbol"/>
+            <Button
+                android:id="@+id/mb_rudder_left_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@id/rudder_display_centre_anchor"
+                android:minWidth="@dimen/rudder_button_min_width"
+                android:textSize="@dimen/text_size_control"
+                android:text="@string/rudder_left_symbol"/>
 
-        <TextView
-            android:id="@+id/mb_motor_power_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Power"/>
+            <!-- Invisible anchor at the centre of the rudder controls display area so that we can position the two rudder buttons to the right and the left of it. -->
+            <View
+                android:id="@+id/rudder_display_centre_anchor"
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"/>
 
-        <Button
-            android:id="@+id/mb_motor_decrease"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="@dimen/motor_button_min_width"
-            android:textSize="@dimen/text_size_control"
-            android:text="-"
-            android:enabled="false"/>
+            <Button
+                android:id="@+id/mb_rudder_right_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/rudder_display_centre_anchor"
+                android:minWidth="@dimen/rudder_button_min_width"
+                android:textSize="@dimen/text_size_control"
+                android:text="@string/rudder_right_symbol"/>
+        </RelativeLayout>
 
-        <Button
-            android:id="@+id/mb_motor_increase"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="@dimen/motor_button_min_width"
-            android:textSize="@dimen/text_size_control"
-            android:text="+"
-            android:enabled="false"/>
+            android:layout_weight="0"
+            android:layout_gravity="right"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/mb_motor_power_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Power"/>
+
+            <Button
+                android:id="@+id/mb_motor_decrease"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="@dimen/motor_button_min_width"
+                android:textSize="@dimen/text_size_control"
+                android:text="-"
+                android:enabled="false"/>
+
+            <Button
+                android:id="@+id/mb_motor_increase"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="@dimen/motor_button_min_width"
+                android:textSize="@dimen/text_size_control"
+                android:text="+"
+                android:enabled="false"/>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
