--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,13 +33,30 @@
         android:layout_marginTop="@dimen/main_list_sub_component_margin_top"
         android:text="Rudder Size"/>
 
-    <SeekBar
-        android:id="@+id/boat_rudder_indicator"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:max="100"
-        android:progress="50"/>
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <SeekBar
+            android:id="@+id/boat_rudder_indicator"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="8"
+            android:layout_gravity="center_horizontal"
+            android:max="100"
+            android:progress="50"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -48,13 +65,30 @@
         android:layout_marginTop="@dimen/main_list_component_margin_top"
         android:text="Launch Speed"/>
 
-    <SeekBar
-        android:id="@+id/boat_launch_speed"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:max="100"
-        android:progress="50"/>
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <SeekBar
+            android:id="@+id/boat_launch_speed"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="8"
+            android:layout_gravity="center_horizontal"
+            android:max="100"
+            android:progress="50"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
     <Button
         android:layout_width="wrap_content"
@@ -77,13 +111,30 @@
         android:layout_marginTop="@dimen/main_list_sub_component_margin_top"
         android:text="Rudder Size"/>
 
-    <SeekBar
-        android:id="@+id/motor_boat_rudder_indicator"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:max="100"
-        android:progress="50"/>
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <SeekBar
+            android:id="@+id/motor_boat_rudder_indicator"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="8"
+            android:layout_gravity="center_horizontal"
+            android:max="100"
+            android:progress="50"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -92,13 +143,30 @@
         android:layout_marginTop="@dimen/main_list_component_margin_top"
         android:text="Maximum Avaliable Motor Power"/>
 
-    <SeekBar
-        android:id="@+id/motor_boat_max_power_indicator"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:max="100"
-        android:progress="38"/>
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <SeekBar
+            android:id="@+id/motor_boat_max_power_indicator"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="8"
+            android:layout_gravity="center_horizontal"
+            android:max="100"
+            android:progress="38"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
     <Button
         android:layout_width="wrap_content"
