--- a/app/src/main/res/layout/activity_boat.xml
+++ b/app/src/main/res/layout/activity_boat.xml
@@ -42,6 +42,14 @@
             android:layout_gravity="center"
             android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/rudder_left_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="2dp"
+                android:textSize="12sp"/>
+
             <Button
                 android:id="@+id/rudder_left_btn"
                 android:layout_width="wrap_content"
@@ -53,6 +61,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/rudder_right_symbol"/>
+
+            <TextView
+                android:id="@+id/rudder_right_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
+                android:layout_marginLeft="2dp"
+                android:textSize="12sp"/>
         </LinearLayout>
 
         <TextView
